# Computer-Graphics-and-Multimedia-Final

./: CMakeLists.txt  README.md
mixed-colors/: mixed-colors.cpp
